Add logo and CSS grid to parent <div>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
         </div>
         <div class="logospace">
-
+            <div id="logo">
+                <img src="img/googlelogo_color_272x92dp.png" alt="Google Logo">
+            </div>
         </div>
         <div class="searchspace">
 
