Edit code for aesthetic reasons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="parent">
-        <div class="topspace">
+        <div class="navbar">
 
         </div>
         <div class="logospace">
@@ -17,10 +17,10 @@
                 <img src="img/googlelogo_color_272x92dp.png" alt="Google Logo">
             </div>
         </div>
-        <div class="searchspace">
+        <div class="search">
 
         </div>
-        <div class="languagespace">
+        <div class="language">
 
         </div>
         <div class="footer">
