--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Google</title>
-    <link ref="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,11 +14,17 @@
         </div>
         <div class="logospace">
             <div id="logo">
+                <a href="">
                 <img src="img/googlelogo_color_272x92dp.png" alt="Google Logo">
+                </a>
             </div>
         </div>
         <div class="search">
-
+            <form>
+                <input type="search">
+                <input type="submit" id="googlesearch" value="Google Search">
+                <imput type="submit" id="feelinglucky" value="I'm Feeling Lucky">
+            </form>
         </div>
         <div class="language">
 
