--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body>
     <div class="parent">
-        <div class="navbar">
 
+        <div class="navbar">
         </div>
+
         <div class="logospace">
             <div id="logo">
                 <a href="">
@@ -19,18 +20,20 @@
                 </a>
             </div>
         </div>
+
         <div class="search">
             <form>
-                <input type="search">
-                <input type="submit" id="googlesearch" value="Google Search">
-                <imput type="submit" id="feelinglucky" value="I'm Feeling Lucky">
+                <input type="search"><br>
+                <button type="submit">Google Search</button>
+                <button type="submit">I'm Feeling Lucky</button>
             </form>
         </div>
-        <div class="language">
 
+        <div class="language">
+            <p>Google offered in: </p>
         </div>
+
         <div class="footer">
-            
         </div>
     </div>
 </body>
