Add CSS Grid to parent <div> and link language option

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="language">
-            <p>Google offered in: </p>
+            <p>Google offered in: <a href="">íslenska</a></p>
         </div>
 
         <div class="footer">
