--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 <head>
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div class="parent">
 
         <div class="navbar">
+            <ul>
+                <li><a href="">Gmail</a></li>
+                <li><a href="">Images</a></li>
+            </ul>
         </div>
 
         <div class="logospace">
@@ -34,6 +39,16 @@
         </div>
 
         <div class="footer">
+            <p>Iceland</p><br>
+            <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Advertising</a></li>
+            <li><a href="">Business</a></li>
+            <li><a href="">How Search Works</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Settings</a></li>
+            </ul>
         </div>
     </div>
 </body>
