--- a/index.html
+++ b/index.html
@@ -9,38 +9,41 @@
 </head>
 
 <body>
-    <div class="parent">
-
-        <div class="navbar">
+    <div class="navbar">
             <ul>
                 <li><a href="">Gmail</a></li>
                 <li><a href="">Images</a></li>
             </ul>
-        </div>
+    </div>
 
-        <div class="logospace">
-            <div id="logo">
-                <a href="">
+    <div class="logospace">
+        <div id="logo">
+            <a href="">
                 <img src="img/googlelogo_color_272x92dp.png" alt="Google Logo">
-                </a>
-            </div>
+            </a>
         </div>
+    </div>
 
-        <div class="search">
-            <form>
-                <input type="search"><br>
+    <div class="search">
+        <form>
+            <input type="search" id="searchbar"><br>
+            <div class="buttons">
                 <button type="submit">Google Search</button>
+                &nbsp;
+                &nbsp;
+                &nbsp;
                 <button type="submit">I'm Feeling Lucky</button>
-            </form>
-        </div>
+            </div>
+        </form>
+    </div>
 
-        <div class="language">
-            <p>Google offered in: <a href="">íslenska</a></p>
-        </div>
+    <div class="language">
+        <p>Google offered in: <a href="">íslenska</a></p>
+    </div>
 
-        <div class="footer">
-            <p>Iceland</p><br>
-            <ul>
+    <div class="footer">
+        <p>Iceland</p><br>
+        <ul>
             <li><a href="">About</a></li>
             <li><a href="">Advertising</a></li>
             <li><a href="">Business</a></li>
@@ -48,10 +51,8 @@
             <li><a href="">Privacy</a></li>
             <li><a href="">Terms</a></li>
             <li><a href="">Settings</a></li>
-            </ul>
-        </div>
+        </ul>
     </div>
 </body>
-
 
 </html>
