Edit navbar and footer links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="navbar">
             <ul>
                 <li><a href="">Gmail</a></li>
+                &nbsp;
+                &nbsp;
                 <li><a href="">Images</a></li>
             </ul>
     </div>
