--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -44,15 +46,19 @@
     </div>
 
     <div class="footer">
-        <p>Iceland</p><br>
+        <p class="iceland">Iceland</p><br>
         <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Advertising</a></li>
-            <li><a href="">Business</a></li>
-            <li><a href="">How Search Works</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Settings</a></li>
+            <li class="leftlinks">
+                <a href="">About</a>
+                <a href="">Advertising</a>
+                <a href="">Business</a>
+                <a href="">How Search Works</a>
+            </li>
+            <li class="rightlinks">
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+                <a href="">Settings</a>
+            </li>
         </ul>
     </div>
 </body>
