Improve footer links and overall color

--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
     </div>
 
     <div class="footer">
-        <p class="iceland">Iceland</p><br>
-        <ul>
-            <li class="leftlinks">
+        <p class="iceland">Iceland</p><br/>
+        <ul class="leftlinks">
+            <li>
                 <a href="">About</a>
                 <a href="">Advertising</a>
                 <a href="">Business</a>
                 <a href="">How Search Works</a>
             </li>
-            <li class="rightlinks">
+        </ul>
+        <div class="centerspace"></div>
+        <ul class="rightlinks">
+            <li>
                 <a href="">Privacy</a>
                 <a href="">Terms</a>
                 <a href="">Settings</a>
