Add account logo in navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
                 <li><a href="">Gmail</a></li>
                 &nbsp;
                 &nbsp;
+                &nbsp;
                 <li><a href="">Images</a></li>
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                <li><a class="acc" href=""><img src="img/account.png"></a></li>
             </ul>
     </div>
 
