Add link to account logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
-                <li><a class="acc" href=""><img src="img/account.png"></a></li>
+                <li><a class="acc" href="https://github.com/clarencev"><img src="img/account.png"></a></li>
             </ul>
     </div>
 
