Add menu icon to navbar and overflow:hidden to hide scrollbar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 &nbsp;
                 &nbsp;
                 &nbsp;
+                <li><a class="menuicon" href=""><img src="img/dots-menu.svg"></a></li>
+                &nbsp;
+                &nbsp;
+                &nbsp;
                 <li><a class="acc" href="https://github.com/clarencev"><img src="img/account.png"></a></li>
             </ul>
     </div>
